# UniSocketsClientServer

./: .gitignore
UniSockClient/: CMakeLists.txt  client.cpp
UniSockServer/: CMakeLists.txt  linMain.cpp  main.cpp  server.cpp
UniSocketsClient/: CMakeLists.txt  main.cpp
